# todo-sticky

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
.github/workflows/: release.yml
electron/: config.ts  fileSync.ts  llm.ts  main.ts  markdown.ts  preload.ts
scripts/: seed-demo.js  tauri-build.js
src/: App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  file_sync.rs  lib.rs  llm.rs  main.rs  markdown.rs
src/components/: AddTask.tsx  DateHeader.tsx  GoalsSidebar.tsx  MiniCalendar.tsx  ScheduleView.tsx  SettingsPanel.tsx  TaskItem.tsx  TaskList.tsx
src/hooks/: useCalendar.ts  useGoals.ts  useTasks.ts
src/styles/: sticky.css
