[package]
name = "todo-sticky"
version = "0.0.0"
edition = "2021"

[lib]
name = "todo_sticky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs"] }
chrono = "0.4"
notify = "7"
regex = "1"
dirs-next = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
